--- a/templates/H2C4P.html
+++ b/templates/H2C4P.html
@@ -27,7 +27,7 @@
         <div class="container-fluid">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href=""></a>
+                    <a class="nav-link active" href="https://www.petamberalert.com/">Can Help If You Have Lost A Pet Yourself</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href=""></a>
@@ -40,8 +40,7 @@
     </nav>
 
 
-    <h2>Click Any Of The Buttons Below For Imformation!!!</h2>
-    <p>Some steps will be very similar</p>
+    <h2>Click Any Of The Buttons Below For Information!</h2>
     <div class="container mt-3">
         <script> function dog() {
             var text = document.getElementById("dog");
@@ -67,53 +66,52 @@
                 text.style.display = "none";
             }
         }
-        function lizard() {
-            var text = document.getElementById("lizard");
+        function rabbit() {
+            var text = document.getElementById("rabbit");
             if (text.style.display === "none") {
                 text.style.display = "block";
             } else {
                 text.style.display = "none";
             }
         }
-
         </script>
         <h2>Steps:</h2>
         <table class="table table-dark table-hover">
             <tbody>
-            <p id='dog' style='display: none'>1.
-            <br>2.
-            <br>3.
-            <br>4.
-            <br>5.
+            <p id='dog' style='display: none'>1. Capture the dog safely without stressing it out or getting yourself hurt. Or if you cannot capture it take a picture or video
+            <br>2. Keep the dog safe, fed well, and hydrated. Make sure anything you give the dog will not harm it.
+            <br>3. Check if the dog has any identification on its collar and scan it for a microchip.
+            <br>4. If you find identification alert the owners.
+            <br>5. If you do not find identification bring the dog to a shelter and ask them to hold it until it's owner picks it up.
             </p>
-            <button type='button' onclick="dog()">How To Care for a lost Puppy</button>
+            <button type='button' onclick="dog()">How To Care for a lost dog</button>
             </tbody>
             <tbody>
-            <p id='cat' style='display: none'>1.
-                <br>2.
-                <br>3.321
-                <br>4.
-                <br>5.
-            </p>
-            <button type='button' onclick="bird()">How To Care for a lost bird</button>
-            </tbody>
-            <tbody>
-            <p id='bird' style='display: none'>1.
-                <br>2.
-                <br>3.321123
-                <br>4.
-                <br>5.
-            </p>
-            <button type='button' onclick="lizard()">How To Care for a lost cat</button>
-            </tbody>
-            <tbody>
-            <p id='lizard' style='display: none'>1.
-                <br>2.12345
-                <br>3.321
-                <br>4.
-                <br>5.
+            <p id='cat' style='display: none'>1. Check to see if the cat is feral. Otherwise, try and capture it with as little stress as possible.
+                <br>2. Figure out if they are a stray or lost cat.
+                <br>3. Check for a collar with a phone number and call the owners if it is present. Also, check for a microchip
+                <br>4. Check lost and found ads posted.
+                <br>5. If nothing works bring it to a shelter and ask them to hold it until the owner is found.
             </p>
             <button type='button' onclick="cat()">How To Care for a lost cat</button>
+            </tbody>
+            <tbody>
+            <p id='bird' style='display: none'>1. If the bird is in a tree try to get it to trust you with food that doesn't harm it.(Try to capture it)
+                <br>2. Feed to bird food that is healthy for it and be sure it is hydrated.
+                <br>3. Check the bird for identification in the form of a band on its leg or a microchip
+                <br>4. If it has identification contact the owner and return the bird
+                <br>5. If there is no identification look for lost pet notices around or if that doesn't work bring the bird to a bird rescue and rehabilitation organization
+            </p>
+            <button type='button' onclick="rabbit()">How To Care for a lost rabbit</button>
+            </tbody>
+            <tbody>
+            <p id='rabbit' style='display: none'>1. Ensure that the rabbit is domesticated and if so capture it with as little stress as possible
+                <br>2. Keep the rabbit safe, well-fed, and hydrated. (Make sure the food you feed it is safe for it)
+                <br>3. Contact pounds or rescues nearby to check if someone has notified of a lost rabbit
+                <br>4. Check if it is microchipped and contact owners if it is.
+                <br>5. If you are unable to catch the rabbit call Rabbit Run-Away Orphanage.
+            </p>
+            <button type='button' onclick="bird()">How To Care for a lost bird</button>
             </tbody>
         </table>
     </div>
