--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -55,7 +55,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{{ url_for('bconnor.PetInfo') }}">Pet Information Overview</a>
-                    <a class="dropdown-item" href="{{ url_for('bchase.Enclosures') }}">Enclosures</a>
+                    <a class="dropdown-item" href="{{ url_for('bchase.enclosures') }}">Enclosures</a>
                     <a class="dropdown-item" href="{{ url_for('btanay.pethistory') }}">Pet History</a>
                     <a class="dropdown-item" href="{{ url_for('bchase.h2') }}">How To Care For Abandoned Pets</a>
 
