--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -21,7 +21,9 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         :root{
             --white: whitesmoke;
             --black: black;
-            --black: #3c3f41;
+            --black: gray;
+            --backgroundcolor: #1d6fa1;
+            --backgroundcolor: #0000d6;
         }
 
         html, body{
@@ -31,7 +33,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             -moz-animation: fadein 2s; /* Firefox */
             -webkit-animation: fadein 2s; /* Safari and Chrome */
             -o-animation: fadein 2s; /* Opera */
-            background-color: #1d6fa1;
+            background-color: var(--backgroundcolor);
             color: var(--white);
         }
 
