--- a/templates/layouts/translator.html
+++ b/templates/layouts/translator.html
@@ -16,7 +16,7 @@
                 </form>
             </div>
         </div>
-        <div class = "row" style="padding-bottom:5%;">
+        <div class = "row" style="padding-bottom:5%; margin-left: 27.5%">
             <div class = "col-12"  style="text-align: center;">
                 <table class="center">
                     <tr>
