--- a/templates/volunteer.html
+++ b/templates/volunteer.html
@@ -1,34 +1,52 @@
 <!DOCTYPE html>
-
-{% include "layouts/navbar.html" %}
-<title>Volunteer Oppurtunities</title>
-
+{% extends "layouts/project.html" %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 {%  block body %}
-<body onload="myFunction()">
-<div class="container-fluid animate-bottom">
-    <h1 style="text-align: center">Volunteer!</h1>
-    <div class="row">
-        <div class="col-sm-12">
-            <p style="font-size: x-large">
-                Here are some places to volunteer!
-                <br>
-                <a href="https://www.volunteermatch.org/">
-                    <img src="/static/assets/volunteer_match.png" width="800px">
-                </a>
-                <br>
-                <a href="https://www.sandiegocounty.gov/content/sdc/volunteer.html">
-                    <img src="/static/assets/sdcgovt_volunteer_program.png" width="800px">
-                </a>
-            </p>
-        </div>
+    <body>
+    <div class="container-fluid">
 
+        <h1 style="text-align: center">Volunteer! </h1>
+        <p> Volunteering is a good way for students to relax their brain and help their community. Below is a couple of different methods of volunteering and outreach, especially in San Diego </p>
+        <div class="row">
+            <div class="col-sm-12">
+                <p style="font-size: x-large">
+                    Government Programs to Volunteer
+                    <br>
+
+                    <a href="https://www.volunteermatch.org/">
+                        <img src="/static/assets/volunteer_match.png" width="800px">
+                    </a>
+                    <br>
+                    <a href="https://www.sandiegocounty.gov/content/sdc/volunteer.html">
+                        <img src="/static/assets/sdcgovt_volunteer_program.png" width="800px">
+                    </a>
+                </p>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12">
+                    <p style="font-size: x-large">
+                        Healthcare Service
+                        <br>
+
+                        <a href="https://www.redcross.org/volunteer/become-a-volunteer.html#step1">
+                            <img src="https://www.redcross.org/content/dam/redcross/red-cross-logos/American-Red-Cross_Logo_1200x630.jpg" height="200px" width="800px">
+                        </a>
+                        <br>
+                        <a href="https://www.sandiegobloodbank.org/donors?gclid=Cj0KCQiAw9qOBhC-ARIsAG-rdn6Jh99P25IJL08dGfAxmtu0nRm08b2OHBkvJkS5V3crO2a0arcmrV0aAnY5EALw_wcB">
+                            <img src="https://www.sandiegobloodbank.org/sites/default/files/SDBB_Logo_Horizontal_600x187.jpg" width="800px">
+                        </a>
+                    </p>
+                </div>
+
+
+            </div>
+        </div>
     </div>
-</div>
-</body>
+    </body>
 {% endblock %}
 </html>
