--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -93,6 +93,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <li class="nav-item"><a class="nav-link" href="{{ url_for('volunteer') }}">Volunteer!</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('search') }}">Search</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('dark') }}">Dark Mode</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('forum') }}">Forum</a></li>
                 </div>
         </ul>
 
