--- a/templates/dark.html
+++ b/templates/dark.html
@@ -13,7 +13,7 @@
         <input type="checkbox" id="switch" name="theme"><label for="switch">Toggle</label>
     </div>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ducimus repellendus dolorem eum consequatur id exercitationem nesciunt, inventore modi perferendis impedit esse, tempora officia, ipsam quae libero. Nostrum, alias dignissimos.</p>
+    <p>This is Dark Mode</p>
 </div>
 <script src="/static/navbar.js"></script>
 </body>
