--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -1,58 +1,99 @@
+<head>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- Bootstrap CSS -->
+</head>
+<style>
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    li {
+        position: relative;
+        padding: 0 20px;
+        height: 100%;
+        display: flex;
+    }
+    a {
+        z-index: 1;
+        color: black;
+        text-decoration: none;
+        font-weight: 500;
+        font-size: 18px;
+        padding: 10px 5px;
+    }
+    li::before {
+        content: "";
+        position: absolute;
+        height: 33.3%;
+        width: 0;
+        background-color: goldenrod;
+        right: 0;
+        z-index: 0;
+        top: 33.33%;
+        transition: all 0.5s;
+    }
+    li::after {
+        content: "";
+        position: absolute;
+        height: 33.3%;
+        width: 0;
+        background-color: goldenrod;
+        left: 0;
+        z-index: 0;
+        bottom: 0;
+        transition: all 0.5s;
+    }
+    a::before {
+        position: absolute;
+        content: "";
+        height: 33.3%;
+        width: 0;
+        background-color: goldenrod;
+        bottom: 130%;
+        left: 0;
+        transition: all 0.5s;
+    }
+    li:hover:before,
+    li:hover::after,
+    li:hover a::before{
+        width: 100%;
+    }
+</style>
+
+<!-- CODEFISH -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="https://csp.nighthawkcodingsociety.com/">{{basename}}</a>
+    <a class="navbar-brand" >Expeditions</a>
+    <button onclick="darkMode()">Toggle Dark Mode</button>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-            <!-- url_for is a Jinja2 pre-processor that finds route from function name (def) -->
-            <a class="nav-link" href={{ url_for('index') }}>Expeditions</a>
-            <a class="nav-link" href={{ url_for('rohan') }}>Rohan</a>
-            <a class="nav-link" href={{ url_for('adi') }}>Adi</a>
-            <a class="nav-link" href={{ url_for('jason') }}>Jason</a>
-            <a class="nav-link" href={{ url_for('divya') }}>Divya</a>
-            <a class="nav-link" href={{ url_for('brian') }}>Brian</a>
-            <a class="nav-link" href={{ url_for('photogallery') }}>Photography</a>
-            <a class="nav-link" href={{ url_for('weather') }}>Weather</a>
-            <a class="nav-link" href={{ url_for('hotels') }}>Hotel</a>
-            <a class="nav-link" href={{ url_for('maps') }}>Map</a>
-            <a class="nav-link" href={{ url_for('airportdetails') }}>Airport</a>
-            <a class="nav-link" href={{ url_for('crud.crud') }}>Crud</a>
-            <a class="nav-link" href={{ url_for('crud.search') }}>Search</a>
-            <a class="nav-link" href={{ url_for('carrental') }}>Car Rental</a>
 
-            <form class="form-inline" onsubmit="alert('it works')">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+            <!-- ABOUT US DROPDOWN -->
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        About Us
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="nav-link" href="{{ url_for('divya') }}">Divya</a>
+                        <a class="nav-link" href="{{ url_for('adi') }}">Adi</a>
+                        <a class="nav-link" href="{{ url_for('brian') }}">Brian</a>
+                        <a class="nav-link" href="{{ url_for('rohan') }}">Rohan</a>
+                        <a class="nav-link" href="{{ url_for('jason') }}">Jason</a>
+                    </div>
+                </li>
+            </div>
         </div>
-        <ul class="nav navbar-nav">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Databases
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="nav-link" href={{ url_for('crud.search') }}>SQL Search</a>
-                    <a class="nav-link" href={{ url_for('crud.crud') }}>SQL Crud </a>
-                </div>
-            </li>
-        </ul>
+    <!-- ABOUT US DROPDOWN -->
+
     </div>
-
-
-
-    {#    <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">#}
-    {#        <ul class="navbar-nav">#}
-    {#            <li class="nav-item dropdown">#}
-    {#                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">#}
-    {#                    Data#}
-    {#                </a>#}
-    {#                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">#}
-    {#                    <li><a class="nav-link" href={{ url_for('crud.crud') }}>Crud</a></li>#}
-    {#                    <li><a class="nav-link" href={{ url_for('crud.search') }}>Search</a></li>#}
-    {#                </ul>#}
-    {#            </li>#}
-    {#        </ul>#}
-    {#    </div>#}
-
+    </div>
 </nav>
