--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -93,7 +93,30 @@
             </div>
         </div>
     <!-- ABOUT US DROPDOWN -->
-
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Travel
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="nav-link" href="{{ url_for('hotels') }}">Hotels</a>
+                <a class="nav-link" href="{{ url_for('airportdetails') }}">Airports</a>
+                <a class="nav-link" href="{{ url_for('maps') }}">Maps</a>
+                <a class="nav-link" href="{{ url_for('weather') }}">Weather</a>
+                <a class="nav-link" href="{{ url_for('carrental') }}">Cars</a>
+            </div>
+        </li>
+    </div>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Create Memories
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="nav-link" href="{{ url_for('photogallery') }}">Photos</a>
+            </div>
+        </li>
+    </div>
     </div>
     </div>
 </nav>
