--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -23,7 +23,7 @@
     }
     a {
         z-index: 1;
-        color: black;
+        color: brown;
         text-decoration: none;
         font-weight: 500;
         font-size: 18px;
