Got a rating test for features working

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -32,7 +32,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                         <a class="dropdown-item" href="/weather">Weather</a>
                         <a class="dropdown-item" href="/crud">Crud</a>
                         <a class="dropdown-item" href="/search">Search</a>
-                    </div>
+                        <a class="dropdown-item" href="/ratingtest">Ratings</a>
                 </li>
                 <a class="nav-link" href="/mainabout">About Us</a>
                 <li class="nav-item dropdown">
