fixed navbar error

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -100,7 +100,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="nav-link" href="{{ url_for('hotels') }}">Hotels</a>
-                <a class="nav-link" href="{{ url_for('airportdetails') }}">Airports</a>
+                <a class="nav-link" href="{{ url_for('flights') }}">Airports</a>
                 <a class="nav-link" href="{{ url_for('maps') }}">Maps</a>
                 <a class="nav-link" href="{{ url_for('weather') }}">Weather</a>
                 <a class="nav-link" href="{{ url_for('carrental') }}">Cars</a>
