--- a/templates/pbl/maps.html
+++ b/templates/pbl/maps.html
@@ -16,7 +16,7 @@
         Interactive Map
     </h1>
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d26762.24393255757!2d-117.13822899999998!3d33.02274!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1641454282715!5m2!1sen!2sus" width="1900" height="700" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d26762.24393255757!2d-117.13822899999998!3d33.02274!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1641454282715!5m2!1sen!2sus" width="1900" height="700" style="border:0;" allowfullscreen="" loading="eager"></iframe>
 {% endblock %}
 
 
