--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -13,9 +13,10 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 
 <head>
     <head>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"><</script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="annonymous"></script>
+        <!-- JQuery CSS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
     <style>
         :root{
@@ -64,7 +65,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 {% endblock %}
 </head>
 
-<body>
+<body style= "background-image: url('/static/assets/city.jpg'); background-repeat: no-repeat; background-size: cover;">
 {% include "layouts/navbar.html" %}
 
 {% block body %}
@@ -102,9 +103,9 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 
     </div>
 </div>
-    <body style= "background-image: url('/static/assets/city.jpg'); background-repeat: no-repeat; background-size: cover;">
+
 {% endblock %}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
-
-
 </html>
