--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -1,9 +1,8 @@
 <!-- Navigation Bar from bootstrap
 This HTML is setup as a fragment allowing it to be "included" by other HTML files via Jinja2
 -->
-<html>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/" style="margin-left:1%">{{basename}}</a>
+        <a class="navbar-brand" href="/" style="margin-left: 1%">{{basename}}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -39,7 +38,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                     <a class="nav-link" href="/feedback">Give Us Feedback!</a>
                 </li>
             </ul>
-            <div class="btn-group" style="text-align: right">
+            <div class="btn-group">
                 <!-- Clock display -->
                 <div class="px-3 text-dark">
                     <span id="clock"></span>
@@ -56,4 +55,3 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             {% endblock %}
         </div>
     </nav>
-</html>
