fixing fibonacci and palindrome

--- a/algorithm/templates/algorithm/fibonacci.html
+++ b/algorithm/templates/algorithm/fibonacci.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-{% extends "layout/base.html" %}
+{% extends "layouts/base.html" %}
 
-{% block content %}
+{% block body %}
     <div class="container py-4">
         <header class="pb-3 mb-4 border-bottom border-primary text-dark">
             <img src="{{ url_for('algorithm.static', filename='Fibonacci_spiral.svg') }}" height="60px" class="d-inline-block align-center" alt="">
