--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -1,59 +1,55 @@
-<!-- Navigation Bar from bootstrap
-This HTML is setup as a fragment allowing it to be "included" by other HTML files via Jinja2
--->
-<html>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/" style="margin-left:1%">{{basename}}</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <style>
-            .dropdown:hover{
-                display: inline-block;
-            }
-        </style>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-                <!--root menu -->
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" id="dropdownMenuButton1" type="button" aria-expanded="false">
-                        Projects
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-
-                        <a class="dropdown-item" href="/mainabout/">Project Green</a>
-                        <a class="dropdown-item" href="/worldclock">World Clock</a>
-                        <a class="dropdown-item" href="/translator">Language Translator</a>
-                        <a class="dropdown-item" href="/mainabout">Rankings</a>
-                        <a class="dropdown-item" href="/mainabout">Activities</a>
-                        <a class="dropdown-item" href="/weather">Weather</a>
-                        <a class="dropdown-item" href="/crud">Crud</a>
-                        <a class="dropdown-item" href="/search">Search</a>
-                        <a class="dropdown-item" href="/ratingtest">Ratings</a>
-                </li>
-                <a class="nav-link" href="/mainabout">About Us</a>
-                <li class="nav-item dropdown">
-                    <a class="nav-link" href="/feedback">Give Us Feedback!</a>
-                </li>
-            </ul>
-            <div class="btn-group" style="text-align: right">
-                <!-- Clock display -->
-                <div class="px-3 text-dark">
-                    <span id="clock"></span>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/" style="margin-left: 1%">{{basename}}</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <style>
+        .dropdown:hover{
+            display: inline-block;
+        }
+    </style>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+            <!--root menu -->
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" id="dropdownMenuButton1" type="button" aria-expanded="false">
+                    Projects
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                    <a class="dropdown-item" href="/mainabout">About Us</a>
+                    <a class="dropdown-item" href="/mainabout/">Project Green</a>
+                    <a class="dropdown-item" href="/worldclock">World Clock</a>
+                    <a class="dropdown-item" href="/translator">Language Translator</a>
+                    <a class="dropdown-item" href="/mainabout">Rankings</a>
+                    <a class="dropdown-item" href="/mainabout">Activities</a>
+                    <a class="dropdown-item" href="/weather">Weather</a>
+                    <a class="dropdown-item" href="/crud">Crud</a>
+                    <a class="dropdown-item" href="/search">Search</a>
+                    <a class="dropdown-item" href="/ratingtest">Rating</a>
                 </div>
-                <!-- Dark mode action -->
-                <div class="form-check form-switch">
-                    <input type="checkbox" onclick="darkFunction()" class="form-check-input" id="darkSwitch">
-                    <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
-                </div>
+            </li>
+            <a class="nav-link" href="/mainabout">About Us</a>
+            <li class="nav-item dropdown">
+                <a class="nav-link" href="/feedback">Give Us Feedback!</a>
+            </li>
+        </ul>
+        <div class="btn-group">
+            <!-- Clock display -->
+            <div class="px-3 text-dark">
+                <span id="clock"></span>
             </div>
-            {% block navbar_script %}
-                <!-- Navigation bar JavaScript support -->
-                <script src={{  url_for("static", filename="/navbar.js", version='140') }}></script>
-            {% endblock %}
+            <!-- Dark mode action -->
+            <div class="form-check form-switch">
+                <input type="checkbox" onclick="darkFunction()" class="form-check-input" id="darkSwitch">
+                <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
+            </div>
         </div>
-    </nav>
-</html>
+        {% block navbar_script %}
+            <!-- Navigation bar JavaScript support -->
+            <script src={{  url_for("static", filename="/navbar.js", version='140') }}></script>
+        {% endblock %}
+    </div>
+</nav>
