--- a/templates/mainabout.html
+++ b/templates/mainabout.html
@@ -8,13 +8,12 @@
     <title>About Us</title>
 </head>
 {% block body %}
-<style>
+    <style>
         .aboutUsImage{
             cursor:pointer;
             width: 232px;
             height: 309px;
             transform: translateY(3px);
-            margin:;
         }
         .nathan{
             background: url('../static/assets/nathan.png') no-repeat;
@@ -49,34 +48,44 @@
             box-shadow: 0 20px 40px rgba(255, 255, 255, 0.7);
         }
     </style>
-</div>
-<body>
-    <div class="col-0" style="margin: 4% 2%">
+    </div>
+    <body>
+    <div class="col-0" style="margin: 7% 0%">
         <div class="table">
             <div class="row" style="margin: 4% 2%">
-                <div class="content_img" style="margin:auto">
-                    <input type="button" class="fa aboutUsImage nathan" onclick="location.href = '/aboutnathan';">
-                    <div style="color:black">Nathan Manangan</div>
+                <div class="col-2 m-3">
+                    <div class="content_img" style="margin:auto">
+                        <input type="button" class="fa aboutUsImage nathan" onclick="location.href = '/aboutnathan';">
+                        <div style="color:black">Nathan Manangan</div>
+                    </div>
                 </div>
-                <div class="content_img" style="margin-left:2%">
-                    <input type="button" class="fa aboutUsImage reem" onclick="location.href = '/aboutreem';">
-                    <div style="color:black">Reem Ben Ishai</div>
+                <div class="col-2 m-3">
+                    <div class="content_img" style="margin-left:2%">
+                        <input type="button" class="fa aboutUsImage reem" onclick="location.href = '/aboutreem';">
+                        <div style="color:black">Reem Ben Ishai</div>
+                    </div>
                 </div>
-                <div class="content_img" style="margin-left:2%">
-                    <input type="button" class="fa aboutUsImage daniel" onclick="location.href = '/aboutdaniel';">
-                    <div style="color:black">Daniel Bertino</div>
+                <div class="col-2 m-3">
+                    <div class="content_img" style="margin-left:2%">
+                        <input type="button" class="fa aboutUsImage daniel" onclick="location.href = '/aboutdaniel';">
+                        <div style="color:black">Daniel Bertino</div>
+                    </div>
                 </div>
-                <div class="content_img" style="margin-left:2%">
-                    <input type="button" class="fa aboutUsImage jacob" onclick="location.href = '/aboutjacob';">
-                    <div style="color:black">Jacob Rozenkrants</div>
+                <div class="col-2 m-3">
+                    <div class="content_img" style="margin-left:2%">
+                        <input type="button" class="fa aboutUsImage jacob" onclick="location.href = '/aboutjacob';">
+                        <div style="color:black">Jacob Rozenkrants</div>
+                    </div>
                 </div>
-                <div class="content_img" style="margin-left:2%">
-                    <input type="button" class="fa aboutUsImage james" onclick="location.href = '/aboutjames';">
-                    <div style="color:black">James Lee</div>
+                <div class="col-2 m-3">
+                    <div class="content_img" style="margin-left:2%">
+                        <input type="button" class="fa aboutUsImage james" onclick="location.href = '/aboutjames';">
+                        <div style="color:black">James Lee</div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</body>
+    </body>
 {% endblock %}
 </html>
