added correct navbar to all pages and fixed individual page

--- a/templates/dark.html
+++ b/templates/dark.html
@@ -1,6 +1,8 @@
 
 {% include "layouts/navbar.html" %}
 <title>Dark Mode</title>
+<body style="font-family: Baskerville" </body>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
