--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -16,7 +16,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
         margin-top: -6px;
     }
     body {
-        background-image: url('/static/background.jpeg');
+        background-color: #EBF7FA;
     }
 
     h1 {
@@ -91,6 +91,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <li class="nav-item"><a class="nav-link" href="{{ url_for('stress') }}">Stress Relief</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('study') }}">Study Resources</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('volunteer') }}">Volunteer!</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('trivia') }}">Trivia</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('search') }}">Search</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('dark') }}">Dark Mode</a></li>
             <li class="nav-item"><a class="nav-link" href="{{ url_for('forum') }}">Forum</a></li>
