--- a/templates/volunteer.html
+++ b/templates/volunteer.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
-{% extends "layouts/project.html" %}
-<html lang="en">
+{% include "layouts/navbar.html" %}
+<title>Volunteer</title>
+<body style="font-family: Baskerville" </body>
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -10,10 +11,11 @@
     <div class="container-fluid">
 
         <h1 style="text-align: center">Volunteer! </h1>
-        <p> Volunteering is a good way for students to relax their brain and help their community. Below is a couple of different methods of volunteering and outreach, especially in San Diego </p>
+        <p style="color: black">
+            Volunteering is a good way for students to relax their brain and help their community. Below is a couple of different methods of volunteering and outreach, especially in San Diego </p>
         <div class="row">
             <div class="col-sm-12">
-                <p style="font-size: x-large">
+                <p style="font-size: x-large; color: black">
                     Government Programs to Volunteer
                     <br>
 
@@ -29,6 +31,7 @@
 
             <div class="row">
                 <div class="col-sm-12">
+                    <br>
                     <p style="font-size: x-large">
                         Healthcare Service
                         <br>
