--- a/templates/forum.html
+++ b/templates/forum.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Forum</title>
-</head>
+{% include "layouts/navbar.html" %}
+<title>Forum</title>
+<body style="font-family: Baskerville" </body>
+
+
 <body style="background-color: #EBF7FA;">
 
 <style>
