--- a/templates/home.html
+++ b/templates/home.html
@@ -11,9 +11,10 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
+
     </head>
     <br>
-    <body onload="myFunction()">
+    <body style="background-image: url('/static/background.jpeg');" onload="myFunction()">
     <h1>Student Resources</h1>
     <br>
     <br>
