--- a/crud3/templates/crud/search.html
+++ b/crud3/templates/crud/search.html
@@ -11,11 +11,11 @@ inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
 {% block body %}
 <body onload="myFunction()">
 <div class="animate-bottom">
-    <div class="container py-4 bg-primary">
+    <div class="container py-4 bg-dark">
         <!-- heading -->
         <header class="pb-3 mb-4 border-bottom">
             <a href="#" class="d-flex align-items-center text-light text-decoration-none">
-                <span class="fs-4">Search Database</span>
+                <span class="fs-4">Search for Tutors</span>
             </a>
         </header>
         <!-- search box -->
@@ -36,6 +36,7 @@ inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
     <!-- result of search -->
     <div class="container">
         <div class="row" id="result">
+
         </div>
     </div>
     </div>
