--- a/templates/pbl/weather.html
+++ b/templates/pbl/weather.html
@@ -4,20 +4,34 @@
 
 {% block body %}
 
-    <form action="/weather/" method="POST">
+    <form action="/weather/" method="POST" class="form">
     <input type="text" placeholder="Enter keyword term" name='keyword'>
-    <button type="submit">Get Weather</button>
+    <button type="submit" class="button">Get Weather</button>
 </form>
     <body style="background-color:lightpink; height: 1000px">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<!--    <link href="form.css" rel="stylesheet">-->
 <style>
-    table, td, th {
-        border: 4px solid midnightblue;
-        padding: 50px;
+    .form input[type=text] {
+        background-color: white;
+        background-image: url('searchicon.png');
+        background-position: 10px 10px;
+        background-repeat: no-repeat;
+        padding-left: 40px;
     }
+    .form input[type=text]:focus {
+    }
+    .button{
+
+    }
+    /*table, td, th {*/
+    /*    border: 4px solid midnightblue;*/
+    /*    padding: 50px;*/
+    /*}*/
     td, th {
         text-align:center;
-        color: midnightblue;
-        font-size: 20px;
+        /*color: midnightblue;*/
+        /*font-size: 20px;*/
     }
     table{
         width: 75%;
@@ -32,7 +46,7 @@
         </div>
         {% if results %}
         <div class=center-block">
-            <table>
+            <table class="table table-striped">
                 <tr>
                     <th>City</th>
                     <th>Wind Speed</th>
@@ -58,12 +72,12 @@
     </div>
 
 
-<p>
-    Currently in {{ results.location.city }}, the wind speed is {{results.current_observation.wind.speed}}.
-    The humidity is {{results.current_observation.atmosphere.humidity}}, the visibility is
-    {{results.current_observation.atmosphere.visibility}}, and the pressure is
-    {{results.current_observation.atmosphere.pressure}}. Sunrise today is at
-    {{results.current_observation.astronomy.sunrise}} and sunset is at {{results.current_observation.astronomy.sunset}}.
-</p>
+<!--<p>-->
+<!--    Currently in {{ results.location.city }}, the wind speed is {{results.current_observation.wind.speed}}.-->
+<!--    The humidity is {{results.current_observation.atmosphere.humidity}}, the visibility is-->
+<!--    {{results.current_observation.atmosphere.visibility}}, and the pressure is-->
+<!--    {{results.current_observation.atmosphere.pressure}}. Sunrise today is at-->
+<!--    {{results.current_observation.astronomy.sunrise}} and sunset is at {{results.current_observation.astronomy.sunset}}.-->
+<!--</p>-->
 {% endif %}
 {% endblock %}
