--- a/algorithm/templates/algorithm/palindrome.html
+++ b/algorithm/templates/algorithm/palindrome.html
@@ -2,6 +2,7 @@
 {% extends "layouts/base.html" %}
 
 {% block body %}
+    <body style="background-color:powderblue; height: 15000px">
     <div class="container py-4">
         <header class="pb-3 mb-4 border-bottom border-primary text-dark">
             <img src="{{ url_for('algorithm.static', filename='palindrome.jpeg') }}" height="60px" class="d-inline-block align-center" alt="">
