adjustments to about me

--- a/templates/aboutpages/jason.html
+++ b/templates/aboutpages/jason.html
@@ -11,7 +11,7 @@
     <p style="text-align: center; font-size: 100px; font-weight: 600; color: rebeccapurple">
        Jason Kaplan's Krib
     </p>
-    <p align="right">
+    <p align="center">
         </br>
         <button onclick="mask1()">Toggle Mask</button>
         </br>
@@ -19,7 +19,7 @@
         </br>
     </p>
     </div>
-    <p align="left">
+    <p align="center">
         <iframe
                 width="950"
                 height="600"
@@ -71,5 +71,6 @@
         zoom: 2.70
     });
 </script>
+
 
 {% endblock %}
