--- a/templates/stress.html
+++ b/templates/stress.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
 </head>
-<style>
+<style> <!-- Code from w3schools -->
 .button {
   border: none;
   color: white;
@@ -44,8 +44,35 @@
                 <img src="/static/assets/colorpage.jpg" width=70%">
             </a>
         </p>
+            <div class="col-sm-6">
+                <p>
+                <p style="font-size: x-large">
+                    <button class="button button1">How are you feeling today?</button>
+                    <br>
+                    <div class="col-sm-7">
+                        <p>
+                        <p style="font size: medium">
+                            <button class="button button2">Calm</button>
+                            <br>
+                            <img src="/static/assets/smileface.jpg" width=70%">
+                        <p style="font size: medium">
+                            <br>
+                            <button class="button button3">Sad</button>
+                            <img src="/static/assets/Sad_Face_Emoji_large.png" width=70%">
+                        <p style="font size: medium">
+                            <br>
+                            <button class="button button3">Happy</button>
+                            <img src="/static/assets/smileface.jpg" width=70%">
+                        </p>
+                    </div>
+
+            </div>
+                    </a>
+                </p>
+            </div>
     </div>
 </div>
+
 </div>
 
 </body>
