--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -19,7 +19,6 @@
                     Projects
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                    <a class="dropdown-item" href="/mainabout">About Us</a>
                     <a class="dropdown-item" href="/mainabout/">Project Green</a>
                     <a class="dropdown-item" href="/worldclock">World Clock</a>
                     <a class="dropdown-item" href="/translator">Language Translator</a>
@@ -29,6 +28,7 @@
                     <a class="dropdown-item" href="/crud">Crud</a>
                     <a class="dropdown-item" href="/search">Search</a>
                     <a class="dropdown-item" href="/ratingtest">Rating</a>
+                    <a class="dropdown-item" href="/numberguess">Number Guesser</a>
                 </div>
             </li>
             <a class="nav-link" href="/mainabout">About Us</a>
