--- a/templates/pbl/hotels.html
+++ b/templates/pbl/hotels.html
@@ -127,7 +127,7 @@
 <table class="list-group">
     <tr class="list-group-item list-group-item-action d-flex gap-3 py-3">
 <!--        <th>GeoID</th>-->
-        <th>Hotel Name</th>
+        <th>Hotel Name (Click to view location)</th>
     </tr>
     {% for suggestion in results.suggestions %}
         {% for entities in suggestion.entities %}
