background color change

--- a/crud/templates/crud/search.html
+++ b/crud/templates/crud/search.html
@@ -10,7 +10,7 @@ inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
 {% endblock %}
 
 {% block body %}
-    <body style="background-color:#74288d; height: 2000px">
+    <body style="background-color:powderblue; height: 2000px">
     <div class="container py-4 bg-primary">
         <!-- heading -->
         <header class="pb-3 mb-4 border-bottom">
