fixed navbar issue on places page

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -94,6 +94,7 @@
                 <a class="nav-link" href="{{ url_for('maps') }}">Maps</a>
                 <a class="nav-link" href="{{ url_for('weather') }}">Weather</a>
                 <a class="nav-link" href="{{ url_for('carrental') }}">Cars</a>
+                <a class="nav-link" href="{{ url_for('places') }}">Places</a>
             </div>
         </li>
     </div>
