--- a/templates/places.html
+++ b/templates/places.html
@@ -1,4 +1,6 @@
+{% extends "layouts/base.html" %}
 
+{% block body %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -124,3 +126,4 @@ function PickRandomWord(frm) {
 </body>
 
 </html>
+{% endblock %}
